# coralis

./: .gitignore  CMakeLists.txt  README.md  build.sh  shell.nix  todo.md
include/: args.h  builtin.h  helper.h  parser.h  utils.h
src/: CMakeLists.txt  args.c  builtin.c  helper.c  main.c  parser.c  utils.c
tests/: CMakeLists.txt  parser_test.cc
